Added EDA and Modeling

--- a/01_get_data.ipynb
+++ b/01_get_data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
        "'https://api.pushshift.io/reddit/search/submission'"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
        "200"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
        "100"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,11 +137,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'all_awardings': [],\n",
+       " 'allow_live_comments': False,\n",
+       " 'author': 'ilritorno',\n",
+       " 'author_flair_css_class': None,\n",
+       " 'author_flair_richtext': [],\n",
+       " 'author_flair_text': None,\n",
+       " 'author_flair_type': 'text',\n",
+       " 'author_fullname': 't2_15rvbr',\n",
+       " 'author_patreon_flair': False,\n",
+       " 'author_premium': False,\n",
+       " 'awarders': [],\n",
+       " 'can_mod_post': False,\n",
+       " 'contest_mode': False,\n",
+       " 'created_utc': 1609274965,\n",
+       " 'domain': 'self.running',\n",
+       " 'full_link': 'https://www.reddit.com/r/running/comments/kmmmpc/five_stages_of_running/',\n",
+       " 'gildings': {},\n",
+       " 'id': 'kmmmpc',\n",
+       " 'is_crosspostable': True,\n",
+       " 'is_meta': False,\n",
+       " 'is_original_content': False,\n",
+       " 'is_reddit_media_domain': False,\n",
+       " 'is_robot_indexable': True,\n",
+       " 'is_self': True,\n",
+       " 'is_video': False,\n",
+       " 'link_flair_background_color': '#007373',\n",
+       " 'link_flair_css_class': 'linkflair-article',\n",
+       " 'link_flair_richtext': [],\n",
+       " 'link_flair_template_id': '21f33906-6c17-11e5-86ae-0e96416492c1',\n",
+       " 'link_flair_text': 'Article',\n",
+       " 'link_flair_text_color': 'dark',\n",
+       " 'link_flair_type': 'text',\n",
+       " 'locked': False,\n",
+       " 'media_only': False,\n",
+       " 'no_follow': True,\n",
+       " 'num_comments': 0,\n",
+       " 'num_crossposts': 0,\n",
+       " 'over_18': False,\n",
+       " 'parent_whitelist_status': 'all_ads',\n",
+       " 'permalink': '/r/running/comments/kmmmpc/five_stages_of_running/',\n",
+       " 'pinned': False,\n",
+       " 'pwls': 6,\n",
+       " 'retrieved_on': 1609274976,\n",
+       " 'score': 1,\n",
+       " 'selftext': \"I was browsing through old articles that I archived with [pocket](https://app.getpocket.com/) when I stumbled on this one: \\n\\n[https://web.archive.org/web/20150904102326/https://www.shelterpub.com/\\\\_fitness/\\\\_running/run\\\\_5\\\\_stages.html](https://web.archive.org/web/20150904102326/https://www.shelterpub.com/_fitness/_running/run_5_stages.html)\\n\\nThe original URL no longer works, thankfully it was available on webarchive.\\n\\nPersonally I don't really know what stage I'm at (i'd like to think 4, but probably not there yet), and I also alternate running and cycling, but anyway, I  believe there are many useful insights in this article. \\n\\nAnd you, what's your stage?\",\n",
+       " 'send_replies': False,\n",
+       " 'spoiler': False,\n",
+       " 'stickied': False,\n",
+       " 'subreddit': 'running',\n",
+       " 'subreddit_id': 't5_2qlit',\n",
+       " 'subreddit_subscribers': 1249784,\n",
+       " 'subreddit_type': 'public',\n",
+       " 'thumbnail': 'self',\n",
+       " 'title': 'Five stages of running',\n",
+       " 'total_awards_received': 0,\n",
+       " 'treatment_tags': [],\n",
+       " 'upvote_ratio': 1.0,\n",
+       " 'url': 'https://www.reddit.com/r/running/comments/kmmmpc/five_stages_of_running/',\n",
+       " 'whitelist_status': 'all_ads',\n",
+       " 'wls': 6}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#posts[0]"
+    "posts[0]"
    ]
   },
   {
