Moved to code folder. Finished Readme

--- a/code/01_Retrieve_Data.ipynb
+++ b/code/01_Retrieve_Data.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "## Reddit Post Natural Language Processing and Classification\n",
-    "![reddit](images/reddit_logo.png)\n",
+    "![reddit](../images/reddit_logo.png)\n",
     "### 01. Data Retrieval\n",
     "\n",
     "\n"
@@ -52,10 +52,10 @@
     "\n",
     "The two subreddits to look at are:<br>\n",
     "Ask Culinary - a subreddit devoted to food, cooking, sharing recipes, etc.<br>\n",
-    "![reddit](images/reddit_ask_culinary_logo.png)<br>\n",
+    "![reddit](../images/reddit_ask_culinary_logo.png)<br>\n",
     "\n",
     "and Running - a subreddit pertaining to running, jogging, etc.<br>\n",
-    "![reddit](images/reddit_running_logo.png)\n",
+    "![reddit](../images/reddit_running_logo.png)\n",
     "\n",
     "\n",
     "A working theory to prove or disprove regarding the two subreddits:\n",
@@ -937,7 +937,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "posts_df.to_csv(f'./data/{ subreddit }.csv', index=False)"
+    "posts_df.to_csv(f'../data/{ subreddit }.csv', index=False)"
    ]
   },
   {
