--- a/code/03_Modeling.ipynb
+++ b/code/03_Modeling.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "## Reddit Post Natural Language Processing and Classification\n",
-    "![reddit](images/reddit_logo.png)\n",
+    "![reddit](../images/reddit_logo.png)\n",
     "### 03. Modeling\n",
     "\n",
     "\n"
@@ -170,7 +170,7 @@
     }
    ],
    "source": [
-    "posts_df = pd.read_csv('data/clean_posts.csv')\n",
+    "posts_df = pd.read_csv('../data/clean_posts.csv')\n",
     "posts_df.head()"
    ]
   },
@@ -883,27 +883,6 @@
     "disp = plot_confusion_matrix(forest_gs, X_test, y_test, cmap='Blues', values_format='d',display_labels=['Ask Culinary', 'running'])\n",
     "disp.ax_.set_title(\"Random Forest\\nConfusion Matrix\");"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
