--- a/code/04a_Sentiment-Appendix.ipynb
+++ b/code/04a_Sentiment-Appendix.ipynb
@@ -5,19 +5,18 @@
    "metadata": {},
    "source": [
     "## Reddit Post Natural Language Processing and Classification\n",
-    "![reddit](images/reddit_logo.png)\n",
+    "![reddit](../images/reddit_logo.png)\n",
     "### 04. Sentiment Analysis"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from nltk.sentiment.vader import SentimentIntensityAnalyzer\n",
-    "from nltk.tokenize import RegexpTokenizer\n",
     "\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "from sklearn.feature_extraction import text\n",
@@ -27,11 +26,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "posts_df = pd.read_csv('data/clean_posts.csv')\n",
+    "posts_df = pd.read_csv('../data/clean_posts.csv')\n",
     "#posts_df.head()"
    ]
   },
@@ -45,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +53,7 @@
        "(189, 8)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,17 +107,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "vader_lexicon = pd.read_csv('data/vader_lexicon.txt', sep='\\t', header=0, names=['token', 'mean_sentiment_rating', 'standard_deviation', 'raw_human_sentiment_ratings'])\n",
+    "vader_lexicon = pd.read_csv('../data/vader_lexicon.txt', sep='\\t', header=0, names=['token', 'mean_sentiment_rating', 'standard_deviation', 'raw_human_sentiment_ratings'])\n",
     "#vader_lexicon.iloc[4400:4415]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +250,7 @@
        "2  0.047    0.3612  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +392,7 @@
        "2  0.192    0.9050  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -514,6 +513,21 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>5882</th>\n",
+       "      <td>AskCulinary</td>\n",
+       "      <td>im looking for a place that pays better and ha...</td>\n",
+       "      <td>I work at a Midwestern USA gas station/pizza p...</td>\n",
+       "      <td>geopjm10</td>\n",
+       "      <td>1602041695</td>\n",
+       "      <td>2020-10-07 03:34:55</td>\n",
+       "      <td>im looking for a place that pays better and ha...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.706</td>\n",
+       "      <td>0.294</td>\n",
+       "      <td>0.9062</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>2337</th>\n",
        "      <td>AskCulinary</td>\n",
        "      <td>I want to make some cakesicles for my kids fri...</td>\n",
@@ -529,33 +543,18 @@
        "      <td>0.9062</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>171</th>\n",
+       "      <th>5213</th>\n",
        "      <td>AskCulinary</td>\n",
-       "      <td>...someone in this sub likely has a real stron...</td>\n",
-       "      <td>This might seem like a boring question but...</td>\n",
-       "      <td>kayjeanbee</td>\n",
-       "      <td>1609824363</td>\n",
-       "      <td>2021-01-05 05:26:03</td>\n",
-       "      <td>...someone in this sub likely has a real stron...</td>\n",
+       "      <td>I’ve been making lot of pizza recently, but fr...</td>\n",
+       "      <td>How to add ‘sourness’ to pizza?</td>\n",
+       "      <td>lexpi</td>\n",
+       "      <td>1603085866</td>\n",
+       "      <td>2020-10-19 05:37:46</td>\n",
+       "      <td>I have been making lot of pizza recently, but ...</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.034</td>\n",
-       "      <td>0.747</td>\n",
-       "      <td>0.218</td>\n",
-       "      <td>0.9062</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4749</th>\n",
-       "      <td>AskCulinary</td>\n",
-       "      <td>I have a beautiful demeyere stainless steel pa...</td>\n",
-       "      <td>Is it ok for the bottoms of my pans to have sp...</td>\n",
-       "      <td>yeaboi42069</td>\n",
-       "      <td>1603851809</td>\n",
-       "      <td>2020-10-28 02:23:29</td>\n",
-       "      <td>I have a beautiful demeyere stainless steel pa...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.019</td>\n",
-       "      <td>0.813</td>\n",
-       "      <td>0.168</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.865</td>\n",
+       "      <td>0.135</td>\n",
        "      <td>0.9062</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -564,32 +563,32 @@
       ],
       "text/plain": [
        "        subreddit                                           selftext  \\\n",
+       "5882  AskCulinary  im looking for a place that pays better and ha...   \n",
        "2337  AskCulinary  I want to make some cakesicles for my kids fri...   \n",
-       "171   AskCulinary  ...someone in this sub likely has a real stron...   \n",
-       "4749  AskCulinary  I have a beautiful demeyere stainless steel pa...   \n",
+       "5213  AskCulinary  I’ve been making lot of pizza recently, but fr...   \n",
        "\n",
        "                                                  title       author  \\\n",
+       "5882  I work at a Midwestern USA gas station/pizza p...     geopjm10   \n",
        "2337  What tempered chocolate is best to use to make...  lolalaughed   \n",
-       "171       This might seem like a boring question but...   kayjeanbee   \n",
-       "4749  Is it ok for the bottoms of my pans to have sp...  yeaboi42069   \n",
+       "5213                    How to add ‘sourness’ to pizza?        lexpi   \n",
        "\n",
        "      created_utc         created_date  \\\n",
+       "5882   1602041695  2020-10-07 03:34:55   \n",
        "2337   1607388315  2020-12-08 00:45:15   \n",
-       "171    1609824363  2021-01-05 05:26:03   \n",
-       "4749   1603851809  2020-10-28 02:23:29   \n",
+       "5213   1603085866  2020-10-19 05:37:46   \n",
        "\n",
        "                                               all_text  class    neg    neu  \\\n",
+       "5882  im looking for a place that pays better and ha...      1  0.000  0.706   \n",
        "2337  I want to make some cakesicles for my kids fri...      1  0.029  0.721   \n",
-       "171   ...someone in this sub likely has a real stron...      1  0.034  0.747   \n",
-       "4749  I have a beautiful demeyere stainless steel pa...      1  0.019  0.813   \n",
+       "5213  I have been making lot of pizza recently, but ...      1  0.000  0.865   \n",
        "\n",
        "        pos  compound  \n",
+       "5882  0.294    0.9062  \n",
        "2337  0.250    0.9062  \n",
-       "171   0.218    0.9062  \n",
-       "4749  0.168    0.9062  "
+       "5213  0.135    0.9062  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -618,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -740,7 +739,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3 rows × 16266 columns</p>\n",
+       "<p>3 rows × 16269 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -754,10 +753,10 @@
        "1  ...          0    0     0     0   0    0   0   0    0    0  \n",
        "2  ...          0    0     0     0   0    0   0   0    0    0  \n",
        "\n",
-       "[3 rows x 16266 columns]"
+       "[3 rows x 16269 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -778,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -786,7 +785,7 @@
      "output_type": "stream",
      "text": [
       "There are 7519 words in the VADER lexicon.\n",
-      "Try to find a match of the 16266 words found in the Ask Culinary posts.\n"
+      "Try to find a match of the 16269 words found in the Ask Culinary posts.\n"
      ]
     }
    ],
@@ -804,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -813,12 +812,12 @@
        "Index(['make', 'use', 'recipe', 'chicken', 'does', 'time', 'cooking', 'know',\n",
        "       'making', 'cook',\n",
        "       ...\n",
-       "       'marcona', 'maraville', 'mans', 'marathon', 'maraschino', 'manwich',\n",
-       "       'manufactures', 'manufactors', 'mantecare', 'aa'],\n",
-       "      dtype='object', length=16266)"
+       "       'margarhita', 'marcato', 'mantecare', 'maraville', 'marathon',\n",
+       "       'maraschino', 'manwich', 'manufactures', 'manufactors', 'aa'],\n",
+       "      dtype='object', length=16269)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -839,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -907,7 +906,7 @@
        "4    sure"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -927,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -994,7 +993,7 @@
        "4    sure     1.3"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1010,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1059,7 +1058,7 @@
        "lonely    -1.5      2"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1080,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1126,7 +1125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1135,7 +1134,7 @@
        "(8081, 13)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1146,7 +1145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1203,22 +1202,6 @@
        "      <td>0.9965</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1308</th>\n",
-       "      <td>11074</td>\n",
-       "      <td>running</td>\n",
-       "      <td>Hi fellow Reddit Runners! \\n\\nI ran a lot in m...</td>\n",
-       "      <td>Help with a training plan please :)</td>\n",
-       "      <td>absentshifts</td>\n",
-       "      <td>1608843686</td>\n",
-       "      <td>2020-12-24 21:01:26</td>\n",
-       "      <td>Hi fellow Reddit Runners!   I ran a lot in my ...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.014</td>\n",
-       "      <td>0.702</td>\n",
-       "      <td>0.284</td>\n",
-       "      <td>0.9965</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>7612</th>\n",
        "      <td>17378</td>\n",
        "      <td>running</td>\n",
@@ -1234,6 +1217,22 @@
        "      <td>0.241</td>\n",
        "      <td>0.9965</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4605</th>\n",
+       "      <td>14371</td>\n",
+       "      <td>running</td>\n",
+       "      <td>Lots of posts be like .. i ran 2 miles without...</td>\n",
+       "      <td>Runners need to stop saying they're \"bad\" at r...</td>\n",
+       "      <td>miii13</td>\n",
+       "      <td>1605050194</td>\n",
+       "      <td>2020-11-10 23:16:34</td>\n",
+       "      <td>Lots of posts be like .. i ran   miles without...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.022</td>\n",
+       "      <td>0.699</td>\n",
+       "      <td>0.279</td>\n",
+       "      <td>0.9965</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -1241,31 +1240,31 @@
       "text/plain": [
        "      index subreddit                                           selftext  \\\n",
        "2024  11790   running  I've been running since August. Smaller distan...   \n",
-       "1308  11074   running  Hi fellow Reddit Runners! \\n\\nI ran a lot in m...   \n",
        "7612  17378   running  Good morning runners,\\n\\nToday I set out for a...   \n",
+       "4605  14371   running  Lots of posts be like .. i ran 2 miles without...   \n",
        "\n",
-       "                                                  title        author  \\\n",
-       "2024                   Impromptu Half Marathon (my 1st)      pako1337   \n",
-       "1308                Help with a training plan please :)  absentshifts   \n",
-       "7612  Alternate ways to check your progress (not che...         Musef   \n",
+       "                                                  title    author  \\\n",
+       "2024                   Impromptu Half Marathon (my 1st)  pako1337   \n",
+       "7612  Alternate ways to check your progress (not che...     Musef   \n",
+       "4605  Runners need to stop saying they're \"bad\" at r...    miii13   \n",
        "\n",
        "      created_utc         created_date  \\\n",
        "2024   1607930409  2020-12-14 07:20:09   \n",
-       "1308   1608843686  2020-12-24 21:01:26   \n",
        "7612   1601901059  2020-10-05 12:30:59   \n",
+       "4605   1605050194  2020-11-10 23:16:34   \n",
        "\n",
        "                                               all_text  class    neg    neu  \\\n",
        "2024  I have been running since August. Smaller dist...      0  0.058  0.736   \n",
-       "1308  Hi fellow Reddit Runners!   I ran a lot in my ...      0  0.014  0.702   \n",
        "7612  Good morning runners,  Today I set out for a  ...      0  0.005  0.754   \n",
+       "4605  Lots of posts be like .. i ran   miles without...      0  0.022  0.699   \n",
        "\n",
        "        pos  compound  \n",
        "2024  0.206    0.9965  \n",
-       "1308  0.284    0.9965  \n",
-       "7612  0.241    0.9965  "
+       "7612  0.241    0.9965  \n",
+       "4605  0.279    0.9965  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1285,7 +1284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1407,7 +1406,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3 rows × 17964 columns</p>\n",
+       "<p>3 rows × 17962 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1421,10 +1420,10 @@
        "1  ...      0   0      0       0          0    0    0         0     0     0  \n",
        "2  ...      0   0      0       0          0    0    0         0     0     0  \n",
        "\n",
-       "[3 rows x 17964 columns]"
+       "[3 rows x 17962 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1451,7 +1450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1460,12 +1459,12 @@
        "Index(['time', 'week', 'miles', 'training', 'really', 'mile', 'started',\n",
        "       'runs', 'marathon', 'day',\n",
        "       ...\n",
-       "       'fussing', 'fussy', 'fusterated', 'futbol', 'futility', 'rivs',\n",
-       "       'fuvking', 'riverfront', 'fz', 'μήνα'],\n",
-       "      dtype='object', length=17964)"
+       "       'fussy', 'fusterated', 'futbol', 'futility', 'roadhawk', 'roadblock',\n",
+       "       'fuvking', 'fz', 'gabe', 'μήνα'],\n",
+       "      dtype='object', length=17962)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1486,7 +1485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1554,7 +1553,7 @@
        "4  thanks"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1574,7 +1573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1641,7 +1640,7 @@
        "4  thanks     1.9"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1657,7 +1656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1724,7 +1723,7 @@
        "loneliness    -1.8      1"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1738,7 +1737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
