--- a/code/02_EDA.ipynb
+++ b/code/02_EDA.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "## Reddit Post Natural Language Processing and Classification\n",
-    "![reddit](images/reddit_logo.png)\n",
+    "![reddit](../images/reddit_logo.png)\n",
     "### 02. Exploratory Data Analysis (EDA)\n",
     "\n",
     "\n"
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 484,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 485,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,12 +43,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 486,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "posts_1 = pd.read_csv(f'./data/{reddit_file_1}')\n",
-    "posts_2 = pd.read_csv(f'./data/{reddit_file_2}')"
+    "posts_1 = pd.read_csv(f'../data/{reddit_file_1}')\n",
+    "posts_2 = pd.read_csv(f'../data/{reddit_file_2}')"
    ]
   },
   {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 487,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 488,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
        "(20200, 6)"
       ]
      },
-     "execution_count": 488,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 489,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
        "10099   1601420875  2020-09-29 23:07:55  "
       ]
      },
-     "execution_count": 489,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 490,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 490,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 491,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 492,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 493,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
        "\"Hi everyone,\\n\\nI'm not sure if this is the place to go with this question, but I was wondering if someone could provide me some insight on what type of fridge I should be looking for for an instructional culinary kitchen. Size, features, etc...\\n\\n&amp;#x200B;\\n\\nI am a little out of my element as I've been tasked with finding the equipment for my park district's new kitchen but I really don't have any experience with teaching cooking or running an educational kitchen.\\n\\n&amp;#x200B;\\n\\nI appreciate any help. I understand if this question is not allowed and needs to be deleted. Fridge for an instructional kitchen?\""
       ]
      },
-     "execution_count": 493,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 494,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 495,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 496,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 497,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +402,7 @@
        "           dtype='int64')"
       ]
      },
-     "execution_count": 497,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 498,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
        "'I came across a post here recently and one the comments was about the dangers of botulism when defrosting vacuum sealed fish. So it got me thinking about defrosting other vacuum sealed meat/foods. I was fortunate to find a gently used chamber vacuum sealer on Craigslist for a ridiculously cheap price few years back. So pretty much seal everything from beef, pork, chicken, fish and other non protein items. For the record, I have always defrosted meat under cold water vacuum sealed bags including fish. Been doing it for years without knowing. I’m fairly knowledgeable when it comes to food safety and was really surprised when i read this. Even thought it was bullshit and ended up confirming it from a publication from Michigan State University. So it got me thinking about my defrosting process and cannot find any legit publications/articles if there is the same dangers of botulism with other foods. Does anyone know if the risk are present outside of seafood? For the time being, I have started to break the seal and defrost in a ziplock back under water but this isn’t ideal and hate using this much plastic. Appreciate any feedback. Defrosting Vacuum Sealed Foods'"
       ]
      },
-     "execution_count": 498,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 499,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 500,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
        "(18105, 7)"
       ]
      },
-     "execution_count": 500,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 501,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +482,7 @@
        "17847"
       ]
      },
-     "execution_count": 501,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 502,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +509,7 @@
        "(17847, 7)"
       ]
      },
-     "execution_count": 502,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 503,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 504,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +671,7 @@
        "17846  Hello runners!   I do not have much to add bec...      0  "
       ]
      },
-     "execution_count": 504,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 505,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 506,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -720,7 +720,7 @@
        "                                      'anywhere', ...}))"
       ]
      },
-     "execution_count": 506,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 507,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 508,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -750,7 +750,7 @@
        "(17847, 29220)"
       ]
      },
-     "execution_count": 508,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 516,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -814,11 +814,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 510,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "reddit_posts.to_csv('data/clean_posts.csv', index=False)"
+    "reddit_posts.to_csv('../data/clean_posts.csv', index=False)"
    ]
   },
   {
